[gd_scene load_steps=5 format=3 uid="uid://fofk1s7s4a4i"]

[ext_resource type="Script" uid="uid://dwu2rohufpk4o" path="res://Scripts/fight_scene.gd" id="1_l3x7y"]
[ext_resource type="PackedScene" uid="uid://bcco7h46tyaqj" path="res://Scenes/dice_roll.tscn" id="2_78axv"]
[ext_resource type="PackedScene" uid="uid://wx41m118lbqo" path="res://Scenes/monster_1.tscn" id="2_x4t7m"]
[ext_resource type="PackedScene" uid="uid://imjepunv7ehx" path="res://Scenes/palyer.tscn" id="4_11mp3"]

[node name="FightScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3x7y")

[node name="dice_result" type="Label" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 327.0
offset_right = 455.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 30

[node name="Dice_roll" parent="." instance=ExtResource("2_78axv")]
position = Vector2(420, 426)
scale = Vector2(5, 5)

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = 202.0
offset_right = 455.0
offset_bottom = 283.0
grow_vertical = 2

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Choose your dice throw ->"

[node name="Dice1" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice2" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice3" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice4" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice5" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice6" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice7" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice8" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice9" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice10" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice11" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice12" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice13" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice14" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice15" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice16" type="Button" parent="BoxContainer"]
layout_mode = 2

[node name="Dice_result" type="Label" parent="BoxContainer"]
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 249.0
offset_right = 123.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2

[node name="RewardLabel" type="Label" parent="BoxContainer2"]
layout_mode = 2
text = "Choose a reward :"

[node name="Reward1" type="Button" parent="BoxContainer2"]
layout_mode = 2

[node name="Reward2" type="Button" parent="BoxContainer2"]
layout_mode = 2

[node name="Reward3" type="Button" parent="BoxContainer2"]
layout_mode = 2

[node name="Monster1" parent="." instance=ExtResource("2_x4t7m")]
position = Vector2(816, 338)
scale = Vector2(10, 10)

[node name="EnemyHP" type="ProgressBar" parent="."]
modulate = Color(0.99383, 0, 0.20946, 1)
layout_mode = 0
offset_left = 985.0
offset_top = 199.0
offset_right = 1021.0
offset_bottom = 471.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 973.0
offset_top = 146.0
offset_right = 1028.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 40
text = "HP"

[node name="hp_monster_value" type="Label" parent="."]
layout_mode = 0
offset_left = 1031.0
offset_top = 326.0
offset_right = 1117.0
offset_bottom = 368.0
theme_override_font_sizes/font_size = 30
text = "10000"

[node name="PlayerHP" type="ProgressBar" parent="."]
modulate = Color(0.99383, 0, 0.20946, 1)
layout_mode = 0
offset_left = 105.0
offset_top = 227.0
offset_right = 141.0
offset_bottom = 499.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 174.0
offset_right = 148.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 40
text = "HP"

[node name="hp_player_value" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 349.0
offset_right = 95.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 30
text = "10000"

[node name="Palyer" parent="." instance=ExtResource("4_11mp3")]
position = Vector2(270, 338)
scale = Vector2(8, 8)

[connection signal="button_down" from="BoxContainer/Dice1" to="." method="_on_dice_1_button_down"]
[connection signal="button_down" from="BoxContainer/Dice2" to="." method="_on_dice_2_button_down"]
[connection signal="button_down" from="BoxContainer/Dice3" to="." method="_on_dice_3_button_down"]
[connection signal="button_down" from="BoxContainer/Dice4" to="." method="_on_dice_4_button_down"]
[connection signal="button_down" from="BoxContainer/Dice5" to="." method="_on_dice_5_button_down"]
[connection signal="button_down" from="BoxContainer/Dice6" to="." method="_on_dice_6_button_down"]
[connection signal="button_down" from="BoxContainer/Dice7" to="." method="_on_dice_7_button_down"]
[connection signal="button_down" from="BoxContainer/Dice8" to="." method="_on_dice_8_button_down"]
[connection signal="button_down" from="BoxContainer/Dice9" to="." method="_on_dice_9_button_down"]
[connection signal="button_down" from="BoxContainer/Dice10" to="." method="_on_dice_10_button_down"]
[connection signal="button_down" from="BoxContainer/Dice11" to="." method="_on_dice_11_button_down"]
[connection signal="button_down" from="BoxContainer/Dice12" to="." method="_on_dice_12_button_down"]
[connection signal="button_down" from="BoxContainer/Dice13" to="." method="_on_dice_13_button_down"]
[connection signal="button_down" from="BoxContainer/Dice14" to="." method="_on_dice_14_button_down"]
[connection signal="button_down" from="BoxContainer/Dice15" to="." method="_on_dice_15_button_down"]
[connection signal="button_down" from="BoxContainer/Dice16" to="." method="_on_dice_16_button_down"]
[connection signal="button_down" from="BoxContainer2/Reward1" to="." method="_on_reward_1_button_down"]
[connection signal="button_down" from="BoxContainer2/Reward2" to="." method="_on_reward_2_button_down"]
[connection signal="button_down" from="BoxContainer2/Reward3" to="." method="_on_reward_3_button_down"]
